# procelio-files

./: .gitignore  Cargo.toml  README.md  inventoryfile.json  robotfile.json  statfile.json
docs/: inventoryfile_v2.md  inventoryfile_v3.md  localization_v1.md  localization_v2.md  robotfile_v2.md  robotfile_v3.md  statfile_v2.md  statfile_v3.md
proceliotool/: Cargo.toml
proceliotool/src/: main.rs
proceliotool/src/tools/: botbin.rs  botmgmt.rs  build_stuff.rs  chatbroadcast.rs  diff.rs  dump.rs  invbin.rs  langbin.rs  mod.rs  patch.rs  reserialize.rs  statbin.rs  techbin.rs  zip.rs
src/: main.rs
src/files/: mod.rs
src/files/inventory/: inventory.rs  mod.rs
src/files/launcher/: launcher_config.rs  mod.rs
src/files/localization/: localization.rs  mod.rs
src/files/robot/: mod.rs  robot.rs
src/files/statfile/: mod.rs  statfile.rs
src/files/stats/: mod.rs  statfile.rs
src/files/tech/: mod.rs
src/tools/: botbin.rs  botmgmt.rs  build_stuff.rs  diff.rs  dump.rs  invbin.rs  langbin.rs  mod.rs  patch.rs  reserialize.rs  statbin.rs  zip.rs
