[package]
name = "procelio_files"
version = "0.1.0"
authors = ["Brennan Stein <brennan.stein@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bsdiff-rs = { git = "https://github.com/BrennanStein/bsdiff-rs", rev = "16a2a75" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
fnv = "1.0.3"
image = "0.23.5"
md-5 = "0.9.1"
lazy_static = "1.4.0"
hex = "0.4.2"
zip = "0.5"
vcdiff = "0.1.0"
time = "0.2.23"
[dev-dependencies]
