[package]
name = "procelio_files"
version = "0.1.0"
authors = ["Brennan Stein <brennan.stein@outlook.com>"]
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
fnv = "1"
md-5 = "0.10"
hex = "0.4"
zip = "4"
time = "0.3"

[workspace]

members = [
    "proceliotool"
]