[package]
name = "proceliotool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
image = "0.23.5"
md-5 = "0.9.1"
lazy_static = "1.4.0"
hex = "0.4.2"
zip = "0.5"
time = "0.2.23"
walkdir = "2"
anyhow = "1.0.57"

reqwest = { version =  "0.11.10", features = ["blocking", "json"]}
dirs = "4.0.0"
itertools = "0.10.3"
clearscreen = "1.0.9"
procelio_files = { path = ".." }
vcdiff = { path = "../../vcdiff-rs" }
