[package]
name = "proceliotool"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
image = "0.25"
md-5 = "0.10"
hex = "0.4"
zip = "4"
time = "0.3"
walkdir = "2"
anyhow = "1"
reqwest = { version =  "0.12", features = ["blocking", "json"]}
dirs = "6"
itertools = "0.14"
clearscreen = "4"
procelio_files = { path = ".." }
vcdiff = { path = "../../vcdiff-rs" }
